--- a/codecov.yml
+++ b/codecov.yml
@@ -1,2 +1,24 @@
 codecov:
-token:12acf7ce-6da0-41e3-a099-d04851afc459
+token: 12acf7ce-6da0-41e3-a099-d04851afc459
+
+coverage:
+    precision: 2
+    round: down
+    range: "70...100"
+    
+parsers:
+    gcov:
+      branch_detections:
+      conditional: yes
+      loop: yes
+      method: no
+      macro: no
+
+commit:
+    layout: "reach,diff,flags,files,footer"
+    behavior: default
+    require_changes: no
+    
+    
+ignore:
+    - "docs/"
