--- a/setup.cfg
+++ b/setup.cfg
@@ -7,9 +7,9 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/cs107-creativename/cs107-FinalProject
 classifiers = 
-	Intended Audience :: Everyone
+    Intended Audience :: Developers
 	Programming Language :: Python :: 3
-	Topic :: Auto Differentiation
+    Topic :: Scientific/Engineering :: Mathematics
 [options]
 package_dir =
 	= src
