--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,16 @@
 [metadata]
 name = cs107_creativename
-version = 0.0.0
-authors = Adriana, Diana, Varshini Xiabuo
+version =  0.0.4
+author = Adriana, Diana, Varshini, Xiabuo
+author_email = atrejosheu@g.harvard.edu
 description = Our package holds a forward and reverse mode implementation for Auto Differentiation
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/cs107-creativename/cs107-FinalProject
 classifiers = 
-	Intended Audience :: Everyone
+	Intended Audience :: Developers
 	Programming Language :: Python :: 3
-	Topic :: Auto Differentiation
+	Topic :: Scientific/Engineering :: Mathematics
 [options]
 package_dir =
 	= src
