--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,4 +3,4 @@ requires = [
 	"setuptools >=42",
 	"wheel"
 ]
-build-backend = "setuptools.build_meta" #use setuptools for building
+build-backend = "setuptools.build_meta" 
