Updates to setup config and Documentation to represent current package

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 [metadata]
 name = cs107_creativename
-version = 0.0.7
+version = 0.0.9
 author = Adriana, Diana, Varshini, Xiabuo
+author_email = atrejosheu@g.harvard.edu, dianafeng@g.harvard.edu,varshinisubhash@g.harvard.edu,xluo@g.harvard.edu
 description = Our package holds a forward and reverse mode implementation for Auto Differentiation
 long_description = file: README.md
 long_description_content_type = text/markdown
